Freedom Sanbox Ant Deploy/src/objects/GoalIAULIPAssociation__c.object
<CustomObject>
    <fields>
        <fullName>Allocation__c</fullName>
        <label>Allocation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Value__c</fullName>
        <formula>Portfolio_Report__r.Current_Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Goal__c</fullName>
        <label>Goal</label>
        <referenceTo>Goal__c</referenceTo>
        <relationshipLabel>Investment Assets &amp; ULIP</relationshipLabel>
        <relationshipName>GoalIAULIPAssociations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Portfolio_Report__c</fullName>
        <label>Investment Assets &amp; ULIP</label>
        <referenceTo>Portfolio_Report__c</referenceTo>
        <relationshipLabel>Investment Assets &amp; ULIP</relationshipLabel>
        <relationshipName>GoalIAULIPAssociations</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <label>GoalIAULIPAssociation</label>
    <nameField>
        <displayFormat>GU-{0000}</displayFormat>
        <label>GoalIAULIPAssociation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GoalIAULIPAssociations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>